2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_load_desc): Set curr_ptr in
	status to current descriptor.
	(epiphany_dma_hw_event_callback): After loading a descriptor, set
	state to either DMA_STATE_ACTIVE, or DMA_STATE_SLAVE, according
	descriptor configuration.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_signal): Remove.
	(epiphany_dma_io_read_buffer): Remove.
	(epiphany_dma_io_write_buffer): Remove.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* configure: Regenerate.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac (SIM_AC_OPTION_HARDWARE): Add "epiphany_dma"
	to hardware list.
	* dv-epiphany_dma.c: New file.
	* epiphany-sim.h: Add function prototypes for
	epiphanybf_set_dmareg, epiphany_dma_set_reg, epiphany_dma_active_p,
	and epiphany_any_periphal_active_p.
	* epiphany.c (epiphanybf_set_dmareg): Implemented. All stores
	to dma registers are routed through here.
	(epiphany_any_periphal_active_p): Implemented.
	* mloop.in (full-exec-scache): Prevent from going into
	blocking wait when core is inactive if there are any pending events.
	* sim-if.c: Add dma hardware.

2015-11-17  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in: Add missing AS_FOR_TARGET.

2015-11-09  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h: Add prototype for epiphanybf_wand.
	* epiphany.c (epiphanybf_wand): Implement. Calls es_wand.
	* esim/esim.c (es_shm_mmr_write): Replace tx argument with to_self.
	(es_shm_tx_mmr_write): Implemented.
	(es_tx_one_shm_atomic_op): Replace call to es_shm_mmr_write with call
	to es_shm_tx_mmr_write.
	(es_tx_one_shm_mmr): Likewise.
	(es_wand_propagate_se): Implement.
	(es_wand_propagate_nw): Implement.
	(es_wand): Implement.
	* esim/esim.h: Add function prototype for es_wand.
	* sim-if.c (sim_esim_init): Initialize current_cpu->wand_lock.
	* sim-main.h (struct _sim_cpu): Add wand_lock mutex, wand_self,
	wand_east, wand_south.
